# GearSpreader

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json  version.rc.in
contrib/Distribution/fomod/: ModuleConfig.xml  info.xml
src/: Config.cpp  Config.h  Logging.cpp  Main.cpp  PCH.h  distributor.cpp  distributor.h  settings.cpp  settings.h
